# SCServo_Linux

./: CMakeLists.txt  README.md  SMS_STS.cpp  SMS_STS.h
cmake/: SCServoConfig.cmake.in
